--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,8 @@ nav {
     display: flex;
     gap: 30px;
     align-items: center;
-    padding: 20px 40px;   
+    padding: 20px 40px;
+    max-width: 1600px;
     
 }
 
